[package]
name = "tokura-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
http = "0.2.8"
reqwest = "0.11.13"
tokio = { version = "1.24.1", features = ["full"] }
